[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/entities/enemies/ai/boss_ai.gd" type="Script" id=1]
[ext_resource path="res://assets/sprite_frames/entities/enemies/spriteframes_boss.tres" type="SpriteFrames" id=2]
[ext_resource path="res://scenes/entities/enemies/ai/states/boss_state_attack.gd" type="Script" id=3]
[ext_resource path="res://scenes/entities/enemies/hitbox.gd" type="Script" id=4]
[ext_resource path="res://assets/shaders/texture_tint.shader" type="Shader" id=5]
[ext_resource path="res://scenes/entities/enemies/boss_enemy.gd" type="Script" id=6]
[ext_resource path="res://scenes/entities/enemies/ai/states/state_disabled.gd" type="Script" id=7]
[ext_resource path="res://assets/graphics/entities/enemies/boss/boss_health_bar.png" type="Texture" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/tint_color = Color( 1, 1, 1, 1 )
shader_param/mix_weight = 0.0

[sub_resource type="CircleShape2D" id=2]
radius = 5.0

[sub_resource type="CircleShape2D" id=3]
radius = 220.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 14 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 9, 13 )

[sub_resource type="Animation" id=6]
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/mix_weight")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.4, 2, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[node name="BossEnemy" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 4
script = ExtResource( 6 )
health = 500
damage = 10
camera_shake_death_dur = 0.5
camera_shake_death_freq = 40.0
camera_shake_death_amp = 20.0
camera_shake_hit_freq = 15.0
camera_shake_hit_amp = 6.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
frames = ExtResource( 2 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 13 )
shape = SubResource( 2 )

[node name="BossAI" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="PlayerDetectionArea" type="Area2D" parent="BossAI"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossAI/PlayerDetectionArea"]
shape = SubResource( 3 )

[node name="StateDisabled" type="Node" parent="BossAI"]
script = ExtResource( 7 )

[node name="StateAttack" type="Node" parent="BossAI"]
script = ExtResource( 3 )

[node name="CalculatePathTimer" type="Timer" parent="BossAI"]
wait_time = 0.05

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 3 )
shape = SubResource( 4 )

[node name="AttackBox" type="Area2D" parent="."]
collision_layer = 2147483712
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox"]
position = Vector2( 0, 3 )
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hurt = SubResource( 6 )

[node name="PathNode" type="Node" parent="."]

[node name="Path" type="Line2D" parent="PathNode"]
width = 1.0
default_color = Color( 0.4, 0.4, 1, 0.2 )

[node name="FlamingBulletsTimeout" type="Timer" parent="."]
wait_time = 5.0

[node name="FlamingBulletsTimer" type="Timer" parent="."]

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -12.0
margin_top = -17.0
margin_right = 52.0
margin_bottom = 47.0
value = 100.0
texture_progress = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="BossAI/PlayerDetectionArea" to="BossAI" method="_on_PlayerDetectionArea_body_entered"]
[connection signal="timeout" from="BossAI/CalculatePathTimer" to="BossAI" method="_on_CalculatePathTimer_timeout"]
[connection signal="hitbox_activated" from="Hitbox" to="BossAI" method="_on_Hitbox_hitbox_activated"]
[connection signal="hitbox_activated" from="Hitbox" to="." method="hurt"]
[connection signal="area_entered" from="AttackBox" to="." method="_on_AttackBox_area_entered"]
[connection signal="timeout" from="FlamingBulletsTimeout" to="." method="_on_FlamingBulletsTimeout_timeout"]
[connection signal="timeout" from="FlamingBulletsTimer" to="." method="_on_FlamingBulletsTimer_timeout"]
